name:                shellmate
version:             0.2
synopsis:            Simple interface for shell scripting in Haskell.
description:         Aims to simplify development of cross-platform shell scripts and similar things.
homepage:            http://github.com/valderman/shellmate
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8
bug-reports:         http://github.com/valderman/shellmate/issues

source-repository head
    type:       git
    location:   https://github.com/valderman/shellmate.git

library
  exposed-modules:
    Control.Shell
    Control.Shell.Concurrent
  other-modules:
    Control.Shell.Internal
  build-depends:
    base >=4.7 && <5,
    containers,
    transformers >=0.3,
    time,
    filepath,
    process,
    directory,
    temporary
  ghc-options:
    -Wall
